[package]
name = "escape_plan"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
bevy_replicon = "0.36.1"
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy_replicon_renet = "0.12.0"
avian3d = "0.4.1"
bevy_egui = "0.38.0"
bevy-inspector-egui = "0.35.0"
egui_dock = "0.18.0"
