[package]
name = "escape_plan"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
bevy_renet = "3.0.0"
bevy_replicon = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
